# hoteling_modeling

./: .gitignore  GNN.md  GNN_Improvement_Plan.md  LICENSE  README.md  RELAXED_HOTELLING.md  TODO.md  edit_notebook.py  pyproject.toml
hoteling/: branch_bound.py  game_evaluation.py  graph_generators.py  graph_tool_plot.py  hotelling_game.py  panel.py  widget.py  work_estimation.ipynb
hoteling/algorithms/: branch_bound.py  node.py
hoteling/dash_panel/: dash_app.py  dash_html.py  dash_modal.py  dash_plot.py  hotelling_game.py  run.py  simple_interactive_dash.py
hoteling/generators/: graph_reader.py
hoteling/hoteling_game/: cost_functions.py  game_evaluation.py  hotelling_game.py
hoteling/plot_utils/: widget.py
hotelling/algorithms/: branch_bound.py  node.py
hotelling/dash_panel/: dash_app.py  dash_html.py  dash_plot.py  run.py
hotelling/generators/: graph_generators.py
hotelling/hotelling_game/: game_evaluation.py  hotelling_game.py
hotelling/plot_utils/: widget.py
hotelling/relaxed/: __init__.py  compare.py  mirror_descent.py  rl_module.py  tests.py  utils.py
notebooks/: relaxed_demo.ipynb  testing.ipynb
