[project]
authors = [{name = "xxamxam", email = "158594847+tmpuser1233@users.noreply.github.com"}]
dependencies = []
name = "hoteling"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
hoteling = { path = ".", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
graph-tool = ">=2.98,<3"
ipykernel = ">=7.1.0,<8"
ipywidgets = ">=8.1.8,<9"
cachetools = ">=6.2.1,<7"
plotly = ">=6.4.0,<7"
anywidget = ">=0.9.21,<0.10"

