[project]
authors = [{name = "xxamxam", email = "158594847+tmpuser1233@users.noreply.github.com"}]
dependencies = [
    "ipykernel>=7.1.0,<8",
    "ipywidgets>=8.1.8,<9",
    "cachetools>=6.2.2,<7",
    "anywidget>=0.9.21,<0.10",
    "pip>=25.3,<26",
    "plotly>=6.4.0,<7",
    "numpy",
    "matplotlib",
    "networkx>=3.5,<4",
    "dash>=3.3.0,<4",
    "heapdict>=1.0.1,<2",
    "fire>=0.7.1,<0.8",
    "torch",
    "torch-geometric",
    "scipy<=1.15",
    "pandas>=1.0.0",
    "streamlit-plotly-events>=0.0.6",
    "dash-bootstrap-components>=1.0.0",
    "dash-table>=5.0.0"
]
name = "hotelling"
requires-python = "==3.12.7"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["hotelling"]
